PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Dec 2011, PHP 5.4.0 RC4
- Core:
  . Added max_input_vars directive to prevent attacks based on hash collisions
    (Dmitry).
- CLI SAPI:
  . Fixed bug #60477 (Segfault after two multipart/form-data POST requests,
    one 200 RQ and one 404). (Laruence)
- Pdo Firebird:
  . Fixed bug #48877 ("bindValue" and "bindParam" do not work for PDO Firebird).(Mariuz)  

08 Dec 2011, PHP 5.4.0 RC3
- Core:
  . Fixed bug #60444 (Segmentation fault with include & class extending).
    (Laruence, Dmitry).
  . Fixed bug #60350 (No string escape code for ESC (ascii 27), normally \e).
    (php at mickweiss dot com)
  . Fixed bug #60240 (invalid read/writes when unserializing specially crafted
    strings). (Mike)
  . Implement FR #54514 (Get php binary path during script execution). 
    (Laruence)

- CLI SAPI:
  . Implement FR #60390 (Missing $_SERVER['SERVER_PORT']). (Pierre)

- cURL:
  . Fixed bug #60439 (curl_copy_handle segfault when used with
    CURLOPT_PROGRESSFUNCTION). (Pierrick)

- Intl:
  . Added support for UTS #46. (Gustavo)
  
- OpenSSL:
  . On error in openssl_random_pseudo_bytes() make sure we set strong result
    to false. (Scott)

- Reflection:
  . Fixed bug #60367 (Reflection and Late Static Binding). (Laruence)

24 Nov 2011, PHP 5.4.0 RC2

- Core:
  . Fixed bug #60227 (header() cannot detect the multi-line header with 
     CR(0x0D)). (rui)
  . Fixed bug #60099 (__halt_compiler() works in braced namespaces). (Felipe)
  . Fixed bug #55874 (GCC does not provide __sync_fetch_and_add on some archs).
    (klightspeed at netspace dot net dot au)
  . Fixed bug #52624 (tempnam() by-pass open_basedir with nonexistent
    directory). (Felipe)
  . Fixed bug #55748 (multiple NULL Pointer Dereference with zend_strndup()) 
    (CVE-2011-4153). (Stas)
  . Fixed invalid free in call_user_method() function. (Felipe)